--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cobblemon-fakemon-generator",
+  "name": "frontier-poser-generator",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -10,7 +10,6 @@
     "@mantine/form": "6.0.5",
     "@mantine/hooks": "6.0.5",
     "@tabler/icons-react": "2.11.0",
-    "downloadfile-js": "https://github.com/tmetcalfe89/downloadfile-js",
     "jszip": "^3.10.1",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
@@ -31,7 +30,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://tmetcalfe89.github.io/cobblemon-fakemon-generator",
+  "homepage": "https://scoob2016.github.io/posergenerator",
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
